--- a/css/siteDemo.css
+++ b/css/siteDemo.css
@@ -54,8 +54,31 @@ body {
   height: 200px;
 }
 
+#section2 {
+  height: 300px;
+}
 
+#section3 {
+  height: 200px;
+  background-color: pink;
+}
 
+.feature2 {
+  border-right: solid 1px grey;
+  height: 230px;
+}
+
+#thumb {
+  background-color: white;
+  border: solid 1px grey;
+  margin-left: 100px;
+  margin-right: 100px;
+}
+
+.thumb-child {
+  padding-top: 35px;
+  height: 230px;
+}
 
 
 
@@ -163,16 +186,4 @@ body {
   .container {
     width: 1170px;
   }
-}
-
-#thumb {
-  background-color: white;
-  border: solid 1px black;
-  margin-left: 100px;
-  margin-right: 100px;
-}
-
-.thumb-child {
-  padding-top: 35px;
-  height: 300px;
 }
