--- a/css/siteDemo.css
+++ b/css/siteDemo.css
@@ -5,6 +5,7 @@ a{
 
 * {
   font-family : 'Raleway', sans-serif;
+/*  font-family: 'Inconsolata';*/
   font-size: 62,5%;
 }
 
@@ -16,7 +17,7 @@ body {
 
 #navbar{
   padding-top: 10px;
-  background-color: white;
+  background-color: #F3F3F3;
 /*  background-color: white;*/
 }
 
@@ -24,7 +25,7 @@ body {
   margin-left: 100px;
   margin-right: 100px;
   background-color: #60A8B7;
-  color: white;
+  color: black;
   height: 200px;
 }
 
