--- a/css/siteDemo.css
+++ b/css/siteDemo.css
@@ -4,22 +4,37 @@ a{
 }
 
 * {
-  font-family : 'Raleway', sans-serif;
+
 /*  font-family: 'Inconsolata';*/
-  font-size: 62,5%;
+ /* font-size: 62,5%;*/
 }
 
 body {
   margin: 0;
   background: url('pics/background.png');
   background-size: 1440px 800px;
+  font-family : 'Raleway', sans-serif;
 }
 
-#navbar{
+#navbar {
   padding-top: 10px;
-  background-color: #F3F3F3;
-/*  background-color: white;*/
+  background-color: #242424;
+  border-bottom: 1px solid #b9b9b9;
+  font-family: 'Lato', sans-serif;
 }
+
+#navbar a {
+  color: #cccccc !important;
+}
+
+#navbar a:hover {
+  color: #ffffff !important;
+  background-color: #646464 !important;
+}
+
+
+
+
 
 .banner1 {
   color: red;
