--- a/css/siteDemo.css
+++ b/css/siteDemo.css
@@ -12,7 +12,17 @@ body {
   font-family : 'Raleway', sans-serif;
 }
 
+p, h1 {
+  font-family : 'Raleway', sans-serif;
+}
+
 /*NAVIGATION*/
+
+#logo{
+  width:40px;
+  height:40px;
+  max-width: 100%;
+}
 
 #navbar {
   padding-top: 10px;
@@ -34,13 +44,28 @@ body {
 
 .header {
   padding: 140px 0 60px 0;
+  background: url(../img/baniereFond.jpg) no-repeat center center;
+  background-size: cover;
+  width: 100%;
+  border-bottom: 2px solid #c9c9c9;
 }
 
-#logo{
-  width:40px;
-  height:40px;
-  max-width: 100%;
+.header h1 {
+  color: #FF3759;
+  font-family: 'Pacifico', cursive;
+  font-size: 7.5em;
 }
+
+.header p {
+  color: white;
+  font-size: 1.3em;
+}
+
+.header .btn {
+  padding: 5px 50px 5px 50px;
+  border-radius: 0;
+}
+
 
 #section2{
   margin-left: 100px;
