--- a/css/siteDemo.css
+++ b/css/siteDemo.css
@@ -65,6 +65,33 @@ p, h1 {
   padding: 5px 50px 5px 50px;
 }
 
+/*ABOUT*/
+
+.about {
+  padding: 100px 0 100px;
+  text-align: center;
+}
+
+.about h1 {
+  font-size: 1.8em;
+  color: black;
+  padding: 0 0 25px;
+}
+
+.about p {
+  padding-bottom: 25px;
+}
+
+
+
+
+
+
+
+
+
+
+
 
 #section2{
   margin-left: 100px;
