skills section css

--- a/css/siteDemo.css
+++ b/css/siteDemo.css
@@ -90,6 +90,22 @@ p, h1 {
 
 /*SKILLS*/
 
+.skills {
+  background-color: #143B40;
+  text-align: center;
+  color: white;
+  padding: 90px 0 90px;
+}
+
+.skills h1 {
+  font-size: 2em;
+  padding-bottom: 25px;
+}
+
+.features img {
+  padding: 15px 0 35px;
+}
+
 
 
 
