rajout style press section

--- a/css/siteDemo.css
+++ b/css/siteDemo.css
@@ -106,6 +106,27 @@ p, h1 {
   padding: 15px 0 35px;
 }
 
+/*PRESS*/
+
+.press {
+  padding: 90px 0 90px;
+  text-align: center;
+}
+
+.press h1 {
+  font-size: 1.8em;
+  padding-bottom: 25px;
+  color: #FF3759;
+}
+
+.press .press-logo li img {
+  opacity: 0.5;
+  padding-bottom: 25px;
+}
+
+.press .press-logo li:hover img {
+  opacity: 1;
+}
 
 
 
