--- a/css/siteDemo.css
+++ b/css/siteDemo.css
@@ -170,7 +170,6 @@ p, h1 {
 }
 
 .screenshots img {
-  background-color:;
   padding: 20px 0 30px;
 }
 
@@ -178,116 +177,47 @@ p, h1 {
   font-size: 2em;
 }
 
+/*CONTACT*/
 
+.contact {
+  padding: 100px 0 100px;
+  text-align: center;
+}
 
+.contact h1 {
+  font-size: 2em;
+  padding-bottom: 25px;
+}
 
+.contact .fa {
+  color: #143B40;
+  padding: 20px 10px 40px;
+}
 
+.contact li {
+  padding-top: 10px; 
+}
 
+/*FOOTER*/
 
-
-
-
-
-#section2{
-  margin-left: 100px;
-  margin-right: 100px;
-  background-color: black;
+.footer {
+  background-color: #143B40;
   color: white;
-  height: 200px;
+  padding: 30px 0 30px;
 }
 
-#section2row1 {
-  background-color: #F3F3F3;
-  color: #444444;
-  height: 200px;
+.footer .fa {
+  color: #FF3759;
 }
 
-#sectionResume {
-  margin-left: 100px;
-  margin-right: 120px;
+.footer h1 {
+  font-family: 'Lato', sans-serif;
+  font-size: 1.5em;
 }
 
-#section1row2 {
-  background-color: #F3F3F3;
-  height: 200px;
-}
 
-#section1row3 {
-  background-color: #F3F3F3;
-  height: 200px;
-}
 
-.feature {
-  border-right: solid 1px #E3E3E3;
-  padding-top: 35px;
-  height: 200px;
-}
 
-#sectionHi {
-  height: 300px;
-}
-
-#section3 {
-  height: 150px;
-  background-color: black;
-  color: #F3F3F3;
-}
-
-.feature2 {
-/*  border-right: solid 1px #E3E3E3;*/
-  height: 100%;
-  padding-right: 25px;
-}
-
-#thumbStyle{
-  background-color: #F3F3F3;
-  width: 100%;
-}
-
-#thumb {
-  background-color: white;
-  border: solid 1px #E3E3E3;
-  margin-left: 100px;
-  margin-right: 100px;
-  padding-left: 30px;
-  padding-right: 30px;
-}
-
-.thumb-child {
-  padding-top: 35px;
-  height: 230px;
-}
-
-#section4{
-  height: 150px;
-  background-color: black;
-  color: white;
-}
-
-#section4row1 {
-  height: 100px;
-  background-color: #E3E3E3;
-}
-
-#section4row2 {
-  height: 100px;
-  background-color: white;
-}
-
-#section4row3 {
-  height: 100px;
-  background-color: #E3E3E3;
-}
-
-#section5 {
-  height: 150px;
-  background-color: ;
-}
-
-#footer {
-  height: 50px;
-  background-color: ;
-}
 
 
 
