--- a/css/siteDemo.css
+++ b/css/siteDemo.css
@@ -45,7 +45,7 @@ p, h1 {
 
 .header {
   padding: 140px 0 60px 0;
-  background: url(../img/baniereFond.jpg) no-repeat center center;
+  background-color: #143B40;
   background-size: cover;
   width: 100%;
   border-bottom: 2px solid #c9c9c9;
