--- a/css/siteDemo.css
+++ b/css/siteDemo.css
@@ -44,22 +44,22 @@ p, h1 {
 /*HEADER*/
 
 .header {
-  padding: 140px 0 60px 0;
+  padding: 140px 0 0 0;
   background-color: #143B40;
   background-size: cover;
   width: 100%;
-  border-bottom: 2px solid #c9c9c9;
+/*  border-bottom: 2px solid #c9c9c9;*/
 }
 
 .header h1 {
-  color: #F54051;
+  color: #B70103;
   font-family: 'Pacifico', cursive;
   font-size: 7.5em;
 }
 
 .header p {
-  color: #F7EBDF;
-  font-size: 1.3em;
+  color: #F7EBDF; /*creme*/
+  font-size: 1.8em;
 }
 
 .header .btn {
@@ -71,7 +71,7 @@ p, h1 {
 .studies {
   padding: 50px 0 100px;
   text-align: center;
-  background-color: #F7EBDF;
+  background-color: #F7EBDF; /*vert*/
 }
 
 .studies h1 {
@@ -103,16 +103,16 @@ p, h1 {
 /*SKILLS*/
 
 .skills {
-  background-color: #143B40;
+  background-color: #143B40; /*vert*/
   text-align: center;
-  color: #F7EBDF;
+  color: #F7EBDF; /*creme*/
   padding: 90px 0 90px;
 }
 
 .skills h1 {
   font-size: 2em;
   padding-bottom: 25px;
-  color: #F54051;
+  color: #F7EBDF;
 }
 
 .skills img {
@@ -139,7 +139,7 @@ p, h1 {
 .press h1 {
   font-size: 1.8em;
   padding-bottom: 25px;
-  color: #F54051;
+  color: #242424;
 }
 
 .press .certifs-logo li img {
@@ -186,10 +186,10 @@ p, h1 {
 /*SCREENSHOTS*/
 
 .screenshots {
-  background-color: #143B40;
+  background-color: #143B40; /*vert*/
   padding: 90px 0 90px;
   text-align: center;
-  color: #F7EBDF;
+  color: #F7EBDF; /*creme*/
 }
 
 .screenshots img {
@@ -205,7 +205,7 @@ p, h1 {
 .contact {
   padding: 100px 0 100px;
   text-align: center;
-  background-color: #F7EBDF;
+  background-color: #F7EBDF; /*vert*/
 }
 
 .contact h1 {
@@ -214,7 +214,7 @@ p, h1 {
 }
 
 .contact .fa {
-  color: #143B40;
+  color: #143B40; /*vert*/
   padding: 20px 10px 40px;
 }
 
@@ -225,13 +225,13 @@ p, h1 {
 /*FOOTER*/
 
 .footer {
-  background-color: #143B40;
-  color: #F7EBDF;
+  background-color: #143B40; /*antracite*/
+  color: #F7EBDF; /*gris clair*/
   padding: 30px 0;
 }
 
 .footer .fa {
-  color: #F54051;
+  color: #B70103;
 }
 
 .footer h1 {
