--- a/css/siteDemo.css
+++ b/css/siteDemo.css
@@ -72,17 +72,19 @@ p, h1 {
 .studies {
   padding: 50px 0 100px;
   text-align: center;
-  background-color: #F7EBDF; /*vert*/
+  background-color: #F7EBDF; creme
 }
 
 .studies h1 {
-  font-size: 2em;
+  font-size: 2,5em;
   color: #242424;
-  padding: 0 0 50px;
+  padding: 0 0 100px;
 }
 
 .studies h4 {
-  color: grey;
+  color: #666666;
+  font-size: 16px;
+  padding-top: 10px;
 }
 
 .studies p {
@@ -116,8 +118,8 @@ p, h1 {
 }
 
 .skills h1 {
-  font-size: 2em;
-  padding-bottom: 25px;
+  font-size: 2.5em;
+  padding-bottom: 35px;
   color: #F7EBDF;
 }
 
