--- a/css/siteDemo.css
+++ b/css/siteDemo.css
@@ -169,7 +169,7 @@ p, h1 {
   text-align: center;
 }
 
-.press .press-logo li img {
+.press .press-logo  img {
   opacity: 0.5;
   padding-bottom: 25px;
 }
@@ -236,6 +236,7 @@ p, h1 {
   background-color: #143B40; /*antracite*/
   color: #F7EBDF; /*gris clair*/
   padding: 30px 0;
+  text-align: center;
 }
 
 .footer .fa {
@@ -250,9 +251,8 @@ p, h1 {
 .ending {
   background-color: #242424;
   margin-bottom: none;
+  text-align: center;
 }
-
-
 
 
 
