--- a/css/siteDemo.css
+++ b/css/siteDemo.css
@@ -193,6 +193,10 @@ p, h1 {
   opacity: 1;
 }
 
+.span12 {
+  padding-bottom: 55px;
+}
+
 /*SCREENSHOTS*/
 
 .screenshots {
@@ -284,7 +288,15 @@ p, h1 {
   }
 
 
+@media (min-width: 480px) {
+  .container {
+    text-align: center;
+  }
 
+  .certifications #press p {
+    text-align: center;
+  }
+}
 
 }
 @media (min-width: 992px) {
