--- a/siteDemoKat/css/siteDemo.css
+++ b/siteDemoKat/css/siteDemo.css
@@ -254,6 +254,12 @@ p, h1 {
   text-align: center;
 }
 
+@media (min-width: 480px) {
+  .container{
+    width: 100%;
+  }
+}
+
 @media (min-width: 768px) {
   .container{
     width: 100%;
