--- a/siteDemoKat/css/siteDemo.css
+++ b/siteDemoKat/css/siteDemo.css
@@ -49,13 +49,13 @@ p, h1 {
   background-color: #143B40; vert
   background-size: cover;
   width: 100%;
-/*  border-bottom: 2px solid #c9c9c9;*/
+  border-bottom: 2px solid #c9c9c9;
 }
 
 .header h1 {
   color: #B70103;
   font-family: 'Pacifico', cursive;
-  font-size: 7.5em;
+  font-size: 7.5em !important;
 }
 
 .header p {
@@ -259,6 +259,10 @@ p, h1 {
     width: 100%;
   }
 }
+
+.header h1 {
+    font-size: 5em;
+  }
 
 @media (min-width: 768px) {
   .container{
